--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 
 MONGODB_URL="mongodb+srv://bgRemoval:vishwa@cluster0.goo2agl.mongodb.net"
+CLERK_WEBHOOK_SECRET="whsec_HjRlRAv3L9lSy0StvtsdDdnNcuBoAT2j"
